Source/Alternet.UI.Pal/Api/LinkLabel.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2024 AlterNET Software.</auto-generated>

#pragma once

#include "LinkLabel.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API LinkLabel* LinkLabel_Create_()
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<LinkLabel*>([&](){
    #endif
        return new LinkLabel();
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API Color_C LinkLabel_GetHoverColor_(LinkLabel* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<Color_C>([&](){
    #endif
        return obj->GetHoverColor();
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void LinkLabel_SetHoverColor_(LinkLabel* obj, Color value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetHoverColor(value);
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API Color_C LinkLabel_GetNormalColor_(LinkLabel* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<Color_C>([&](){
    #endif
        return obj->GetNormalColor();
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void LinkLabel_SetNormalColor_(LinkLabel* obj, Color value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetNormalColor(value);
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API Color_C LinkLabel_GetVisitedColor_(LinkLabel* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<Color_C>([&](){
    #endif
        return obj->GetVisitedColor();
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void LinkLabel_SetVisitedColor_(LinkLabel* obj, Color value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetVisitedColor(value);
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API c_bool LinkLabel_GetVisited_(LinkLabel* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetVisited();
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void LinkLabel_SetVisited_(LinkLabel* obj, c_bool value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetVisited(value);
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API char16_t* LinkLabel_GetUrl_(LinkLabel* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<char16_t*>([&](){
    #endif
        return AllocPInvokeReturnString(obj->GetUrl());
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void LinkLabel_SetUrl_(LinkLabel* obj, const char16_t* value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetUrl(value);
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API c_bool LinkLabel_GetUseGenericControl_()
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return LinkLabel::GetUseGenericControl();
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void LinkLabel_SetUseGenericControl_(c_bool value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        LinkLabel::SetUseGenericControl(value);
    #if !defined(__WXMSW__)
    });
    #endif
}

ALTERNET_UI_API void LinkLabel_SetEventCallback_(LinkLabel::LinkLabelEventCallbackType callback)
{
    LinkLabel::SetEventCallback(callback);
}